categories api done

--- a/furniture-appwrite/.env
+++ b/furniture-appwrite/.env
@@ -1,2 +1,6 @@
 VITE_APPWRITE_URL=https://cloud.appwrite.io/v1
 VITE_APPWRITE_PROJECT_ID=66f92188002d75dd318e
+VITE_APPWRITE_DATABASE_ID=670249e70016829a6c53
+VITE_APPWRITE_REVIEWS_ID=67024c830033f649a192
+VITE_APPWRITE_PRODUCTS_ID=67024a97002a78565730
+VITE_APPWRITE_CATEGORIES_ID=670249fb003ca342209b
